test/vm/errors/bigint_width_mismatch.ach
// Expected error: BigInt width mismatch (256 + 512)
let a = bigint256(10)
let b = bigint512(20)
let c = a + b
